# mba-ia-refactor-projects-skill

./: .gitignore  README.md  skill-creation-plan.md
.claude/skills/refactor-arch/: SKILL.md
code-smells-project/: .env.example
code-smells-project/src/: app.py
code-smells-project/src/config/: __init__.py  database.py
code-smells-project/src/controllers/: order_controller.py  product_controller.py  (+1 more)
ecommerce-api-legacy/src/: app.js
reports/: audit-project-1.md  audit-project-2.md  audit-project-3.md
reports-after-refactor/: audit-synthetic-go-gin.md  audit-synthetic-ruby-sinatra.md  audit-synthetic-rust-axum.md
synthetic/go-gin-tasks/: .env.example  README.md  go.mod  main.go
synthetic/ruby-sinatra-blog/: Gemfile  README.md  app.rb
synthetic/rust-axum-notes/: .env.example  Cargo.toml  README.md
synthetic/rust-axum-notes/src/: config.rs  error.rs  main.rs  routes.rs  state.rs
synthetic/rust-axum-notes/src/domain/: note.rs
synthetic/rust-axum-notes/src/handlers/: admin_handler.rs  auth_handler.rs  mod.rs  note_handler.rs
synthetic/rust-axum-notes/src/middleware/: auth.rs
synthetic/rust-axum-notes/src/repository/: note_repo.rs  user_repo.rs
synthetic/rust-axum-notes/src/services/: auth_service.rs  mod.rs  note_service.rs
task-manager-api/: app.py  config.py  seed.py
task-manager-api/controllers/: report_controller.py  task_controller.py  user_controller.py
task-manager-api/models/: task.py  user.py
task-manager-api/routes/: report_routes.py  task_routes.py  user_routes.py
task-manager-api/services/: notification_service.py
(+57 files in other folders)
